<resources>
    <string name="app_name">Repetita Iuvant</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Repetita Iuvant</string>
    <string name="second_fragment_label">SIGN IN</string>
    <string name="third_fragment_label">SIGN UP</string>
    <string name="newlesson_fragment_label">New Reservation</string>
    <string name="handle_fragment_label">Handle Reservation</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="a_beautiful_icon">A beautiful Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_fragment">Third Fragment</string>
</resources>