<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.ium.fragmentexample.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:popUpTo="@+id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:popUpTo="@+id/ThirdFragment"
            />
        <action
            android:id="@+id/action_FirstFragment_to_HistoryFragment"
            app:destination="@id/LessonHistory"
            app:popUpTo="@+id/LessonHistory"
            />
        <action
            android:id="@+id/action_FirstFragment_to_NewLesson"
            app:destination="@id/NewLessonFragment"
            app:popUpTo="@+id/NewLessonFragment"/>
        <action
            android:id="@+id/action_FirstFragment_to_HandleFragment"
            app:destination="@id/HandleFragment"
            app:popUpTo="@+id/HandleFragment"/>
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.ium.fragmentexample.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@+id/FirstFragment"/>
        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:popUpTo="@+id/ThirdFragment"/>
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.ium.fragmentexample.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@+id/FirstFragment"/>
        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:popUpTo="@+id/SecondFragment"/>
    </fragment>
    <fragment
        android:id="@+id/NewLessonFragment"
        android:name="com.ium.fragmentexample.NewLessonFragment"
        android:label="@string/newlesson_fragment_label"
        tools:layout="@layout/fragment_new_lesson">

        <action
            android:id="@+id/action_NewLesson_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@+id/FirstFragment"/>

    </fragment>
    <fragment
        android:id="@+id/HandleFragment"
        android:name="com.ium.fragmentexample.HandleFragment"
        android:label="@string/handle_fragment_label"
        tools:layout="@layout/fragment_handle">

        <action
            android:id="@+id/action_Handle_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@+id/FirstFragment"/>

    </fragment>
    <fragment
        android:id="@+id/LessonHistory"
        android:name="com.ium.fragmentexample.LessonHistoryFragment"
        android:label="lesson"
        tools:layout="@layout/fragment_lesson_history">

        <action
            android:id="@+id/action_History_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@+id/FirstFragment"/>

    </fragment>
</navigation>